<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:contentDescription="@string/taxiboard_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/taxiboard" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_welcome"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_text_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/phone_number"
        android:text="@string/sample_phone_number"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/button_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_registered" />

</LinearLayout>